--- a/docs/Blockchain.mdx
+++ b/docs/Blockchain.mdx
@@ -74,3 +74,5 @@ https://www.investopedia.com/terms/b/blockchain.asp
 [Merge, Surge, Verge, Purge, Splurge 到底是什麼？](https://cryptowesearch.com/blog/all/eth-update)
 
 [Why Are Most dApps Built on Ethereum?](https://www.gemini.com/cryptopedia/dapps-ethereum-decentralized-application)
+
+[Layer 2](https://ethereum.org/en/layer-2/)
